# The_Great_Getaway

./: .coverage  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.json  4.8 audit MK1.md  A11Y_CHECKLIST.md  ARCHITECTURE.md  Audit MK3 — launch readiness.md  Audit MK4 — full sweep.md  Audit MK5 — fresh full sweep.md  CIRCLES_DESIGN.md  CONTRIBUTING.md  FIXING_ROADMAP.md  FUTURE_FEATURES.md  IDEAS  Improvements roadmap MK1.md  MAKING_THE_WEBSITE_LIVE.md  README.md  ROADMAP.md  Roadmap MK2 — persona audit.md  SESSION_LOG.md  Transportation design MK1.md  VISION.md  alembic.ini  eslint.config.js  facts_dict.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  travel_planner.db.bak  tsconfig.json  vite.config.js  vitest.config.ts  wsgi_pythonanywhere.py
.github/workflows/: ci.yml  visual-baselines-bootstrap.yml
.husky/: pre-commit  pre-push
frontend/static/: manifest.json  sw.js
frontend/templates/: components.html  index.html  share.html  template.html
migrations/: README  env.py
migrations/versions/: 06a7b8c9d0e2_blocks_table.py  0c7a67724fda_baseline.py  17b8c9d0e1f3_auth_sessions_table.py  18a1b2c3d4e5_null_owner_self_invited_by.py  19b2c3d4e5f6_settlements_party_fk_set_null.py  1ac3d4e5f6a7_feed_comments_edited_at.py  1bd4e5f6a7b8_add_updated_at_to_mutable_tables.py  2ce5f7a9b1c3_user_achievements_revoked_at.py  3df6a8b0c2d4_budget_null_unique_and_collab_index.py  a1b2c3d4e5f6_settlements_audit_table.py  a1f4c7e2b9d3_budgets_half_scope_unique_indexes.py  a1f4c7e2b9d5_profile_quotes.py  a2c5e8d1f7b3_add_trip_countries_json.py  a3f1c9d27e84_add_template_is_public.py  a6b7c8d9e0f1_snapshot_settlement_party_names.py  a8b9c0d1e2f3_json_valid_check_constraints.py  a8c7e2f1b9d4_add_token_jti_to_users.py  a8d2c4f6b1e3_add_day_transport.py  a9c0d1e2f3b4_add_user_scoped_indexes.py  (+38 more)
scratch/: check_js.py  check_js_v2.py  check_js_v3.py  check_syntax.js  test_archive.js
scripts/: check-bundle-size.mjs  fk_audit.py  generate_icons.py  generate_test_fixtures.py  migrate_inline_to_tailwind.py  prune-dead-chunks.mjs
src/: achievements.py  auth.py  config.py  database.py  extensions.py  feed_events.py  fx_rates.py  helpers.py  main.py  maintenance.py  observability.py  security_middleware.py  social.py  travel_planner.db.bak  validators.py
tests/: conftest.py  test_admin_visits.py  test_api.py  test_api_achievements.py  test_api_auth.py  test_api_blocks.py  test_api_budgets.py  test_api_companions.py  test_api_days.py  test_api_expenses.py  test_api_friends.py  test_api_integrations.py  test_api_media.py  test_api_pdf.py  test_api_profile_quotes.py  test_api_security.py  test_api_settlements.py  test_api_social.py  test_api_sync.py  test_api_templates.py  test_api_trip_io.py  test_api_trips.py  test_budget_tombstone_sync.py  test_budgets_mk4.py  test_category_delta_sync.py  test_database.py  test_default_categories_mk4.py  test_entity_delta_pull.py  test_expense_delta_pull.py  test_feed_events.py  test_feed_privacy_mk4.py  test_fk_audit.py  test_i18n_drift.py  test_media_mk4.py  test_media_quota.py  test_media_variants.py  test_money_properties.py  test_observability.py  test_p3_security.py  test_pdf_export.py  (+5 more)
(+4083 files in other folders)
