# Tool configuration for The GG backend (Python side).
#
# MK1 T1-2 (Best-in-class audit MK1.md): this file was a stale generic
# scaffold ("work-project", black+mypy configured but never installed or
# run anywhere). It now holds the REAL toolchain config. Dependencies
# live in requirements.txt (pinned — see T1-3), NOT here: the backend is
# deployed by `pip install -r requirements.txt` on PythonAnywhere, never
# built as a package.

[project]
name = "the-gg-backend"
version = "1.0.0"
description = "Flask backend for The GG travel planner"
# PA's uWSGI worker runs Python 3.11 (pip3.11/python3.11 — see the
# deploy docs); CI runs 3.12; local dev is free to run newer.
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

# ── ruff: lint + format for src/, tests/, migrations/ ──────────────────
# Run:  python3 -m ruff check src tests migrations
#       python3 -m ruff format src tests migrations
# Wired into lint-staged (pre-commit) and the pre-push hook.

[tool.ruff]
target-version = "py311"   # match the PA worker, the oldest runtime
line-length = 100

[tool.ruff.lint]
select = [
    "F",   # pyflakes — real bugs (unused imports/vars, redefinitions)
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort — deterministic import order
    "B",   # bugbear — likely-bug patterns (mutable defaults, raise-from…)
    "UP",  # pyupgrade — keep syntax at the py311 baseline
]
ignore = [
    # Long lines: the codebase's comment-heavy documentation style
    # routinely exceeds any budget worth enforcing; `ruff format`
    # handles CODE wrapping at line-length. Revisit as a ratchet.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Deliberate late imports, each documented inline at the site:
# main.py imports after load_dotenv()/logger setup; feed.py defers
# feed_events imports (circular-import dodge); the pdf package does
# load-bearing re-exports after Blueprint creation.
"src/main.py" = ["E402"]
"src/routes/feed.py" = ["E402"]
"src/routes/pdf/*.py" = ["E402"]
# The pdf package __init__ is a LOAD-BEARING re-export namespace (its
# docstring explains: tests monkeypatch routes.pdf._fetch_cover_map etc.
# and _build_trip_pdf resolves those names from THIS module's globals).
# Many re-exported names are "unused" inside the file by design.
"src/routes/pdf/__init__.py" = ["E402", "F401"]

[tool.ruff.format]
# Preserve the existing quote style file-by-file — flipping every
# string literal to double quotes would churn thousands of lines of
# audit-annotated code for zero behavioral value.
quote-style = "preserve"
